Fixed Article Delete Functionality

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -10,7 +10,7 @@
       %td
         = link_to 'Show Article', article, class: 'btn btn-warning'
         = link_to 'Edit Article', edit_article_path(article), class: 'btn btn-primary'
-        = link_to 'Delete', article_path(article), method: :delete, remote: true, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger'
+        = link_to 'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger'
     - if @articles.size == 0
       %tr
         %td.center{colspan: "5"} Sorry: There are currently no users to display.
