--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -1,3 +1,5 @@
-// Place all the styles related to the articles controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.add-button {
+	width: 8%;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
