--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -1,6 +1,6 @@
 %h3 Editing Article
 
-= bootstrap_form_for @article, url: articles_path, method: :POST do |f|
+= bootstrap_form_for @article, :html => { :multipart => true } do |f|
   = f.text_field :title
   = f.text_area :body
   = f.submit "Save Article", class: 'btn btn-primary'
