--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -1,5 +1,84 @@
 .add-button {
-	width: 8%;
-	margin: 0 auto;
-	margin-bottom: 20px;
+  width: 8%;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
+
+.article {
+  width: 100%;
+  height: auto;
+  background-color: transparent;
+  float: left;
+  border-bottom: 2px solid red;
+  .article-heading {
+    width: 100%;
+    height: 90px;
+    .heading-text {
+      width: 90%;
+      text-transform: capitalize;
+      float: left;
+    }
+    #button {
+      width: 9%;
+      float: left;
+      position: relative;
+      top: 30%;
+    }
+  }
+  .article-body {
+      font-family: sans-serif;
+      font-size: 17px;
+      padding: 10px;
+    }
+}
+
+.comment-section {
+  width: 100%;
+  height: auto;
+  float: left;
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    width: auto;
+    float: left;
+    margin-left: 10px;
+    .active {
+      border-bottom: 3px solid blue;
+    }
+  }
+  .comment {
+    border-bottom: 1px solid #d6dce0;
+    padding: 1.5em 2em;
+    .comment_content {
+      float: left;
+      .comment_name {
+        margin: 1em 0 0 0;
+        font-size: 0.7em;
+        text-transform: uppercase;
+      }
+      .comment_body {
+        font-size: 1.2em;
+        margin: 0.2em 0 0 0;
+      }
+      .comment_time {
+        margin-top: 1.2em;
+        font-size: .8em;
+      }
+    }
+  }
+  .comment-form {
+    width: 50%;
+    float: left;
+  }
+}
+.clearfix:after {
+   content: ".";
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
+
