Updated User Mailer and Added Search functionality

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,3 +1,7 @@
+= form_tag(articles_path, :method => "get", id: "search-form") do
+  = text_field_tag :search, params[:search], placeholder: "Search Posts" 
+  = submit_tag "Search", class: "btn btn-primary"
+
 %h3{style: "text-align: center"} Welcome to the Articles Page
 .add-button
   = link_to 'New Article', new_article_path, class: 'btn btn-primary'
