updated link to article show page

--- a/app/views/user_mailer/sample_email.html.haml
+++ b/app/views/user_mailer/sample_email.html.haml
@@ -8,4 +8,4 @@
 
 %p= @user.token
 
-= link_to 'New article Posted', articles_url(@article.id), class: 'btn btn-warning'
+= link_to 'New article Posted', article_url(@article.id), class: 'btn btn-warning'
