--- a/app/views/users/new.js.haml
+++ b/app/views/users/new.js.haml
@@ -1,5 +1,5 @@
 = content_for :title do
-  %h2 Subscribe to our Article List
+  %h3{style: "text-align: center;"} Subscribe to our Article List
 
 = content_for :content do
   = render 'form'
