--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,5 +1,5 @@
 = form_tag(articles_path, :method => "get", id: "search-form") do
-  = text_field_tag :search, params[:search], placeholder: "Search Posts" 
+  = text_field_tag :search, params[:search], placeholder: "Search Article" 
   = submit_tag "Search", class: "btn btn-primary"
   = link_to 'Back', root_path , class: "btn btn-default"
 
