--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -4,6 +4,11 @@
   margin-bottom: 20px;
 }
 
+table {
+  table-layout: fixed;
+  word-wrap: break-word;
+}
+
 .article {
   width: 100%;
   height: auto;
@@ -45,7 +50,6 @@
     }
     li {
       width: auto;
-      float: left;
       margin-left: 10px;
       .active {
         border-bottom: 3px solid blue;
