--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
 = bootstrap_form_for ([@article, @article.comments.build]) do |f|
-	= f.text_field :name
-	= f.text_area :body
+	= f.text_field :name, required: true
+	= f.text_area :body, required: true
 	= f.submit "Save Comment", class: 'btn btn-primary'
