--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -2,3 +2,4 @@
 	= f.text_field :name, required: true
 	= f.text_area :body, required: true
 	= f.submit "Save Comment", class: 'btn btn-primary'
+	= link_to 'Back', articles_path, class: 'btn btn-default'
