--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -4,6 +4,14 @@
   margin-bottom: 20px;
 }
 
+.heading {
+  text-align: center;
+  font-family: cursive;
+  text-transform: uppercase;
+  color: #D2691E;
+  text-shadow: 1px 1px 2px #000;
+  margin-bottom: 30px;
+}
 table {
   table-layout: fixed;
   word-wrap: break-word;
@@ -79,7 +87,6 @@ table {
   .comment-form {
     width: 50%;
     float: left;
-    margin-top: 55px;
     margin-bottom: 30px;
   }
 }
