--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,18 +1,10 @@
-= form_tag(articles_path, :method => "get", id: "search-form") do
-  = text_field_tag :search, params[:search], placeholder: "Search Article" 
-  = submit_tag "Search", class: "btn btn-primary"
-  = link_to 'Back', root_path , class: "btn btn-default"
-
-%h3{style: "text-align: center"} Welcome to the Articles Page
-.add-button
-  = link_to 'New Article', new_article_path, class: 'btn btn-primary'
-  = link_to 'Subscribe', new_user_path, class: 'btn btn-default', remote: true
+%h2.heading Leeds Diary...
 
 %table.table.table-bordered.table-striped
   %colgroup
     %col.col-md-2
-    %col.col-md-6
-    %col.col-md-4
+    %col.col-md-7
+    %col.col-md-3
   %tr
     %th{style: "text-align: center"} Title
     %th{style: "text-align: center"} Article Content
@@ -22,8 +14,8 @@
       %td{style: "text-align: center"}= article.title
       %td{style: "text-align: center"}= article.body
       %td{style: "text-align: center"}
-        = link_to 'Show Article', article, class: 'btn btn-warning'
-        = link_to 'Edit Article', edit_article_path(article), class: 'btn btn-primary'
+        = link_to 'Show', article, class: 'btn btn-warning'
+        = link_to 'Edit', edit_article_path(article), class: 'btn btn-primary'
         = link_to 'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger'
     - if @articles.size == 0
       %tr
