--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
 
   %body{id: params[:controller].split('/').last}
     .container
+      = render partial: 'shared/header'
       = render partial: 'shared/flash', locals: { flash: flash }
       .row
         .col-lg-12
