Updated the text label on Comment Form

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -14,5 +14,5 @@
     = render partial: @article.comments
 
   .comment-form
-    %h4 Add a Comment
+    %h4 Please add a Comment:
     = render partial: "comments/form"
