--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
 = bootstrap_form_for ([@article, @article.comments.build]) do |f|
-  = f.text_area :body, required: true
+  = f.text_area :body, required: true, label: 'Comment'
   = f.submit "Save Comment", class: 'btn btn-primary'
   = link_to 'Back', articles_path, class: 'btn btn-default'
