--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -8,9 +8,6 @@
     %li.nav-item
       = link_to 'Subscribe', new_user_path, class: 'nav-link', remote: true
   %form.navbar-form.navbar-right
-    = form_tag(articles_path, :method => "get", id: "search-form") do
-      = text_field_tag :search, params[:search], placeholder: "Search Article", class: "form-control"
-      = submit_tag "Search", class: "btn btn-primary"
-
-
-
+    = bootstrap_form_tag(url: articles_path, method: "get") do |f|
+      = f.text_field :search, placeholder: "Search Article", hide_label: true
+      = f.submit "Search", class: "btn btn-primary"
