--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,8 +1,8 @@
 .user-from
   = bootstrap_form_for @user, url: users_path, remote: true do |f|
-    = f.text_field :first_name
-    = f.text_field :last_name
-    = f.text_field :email
+    = f.text_field :first_name, placeholder: "First Name"
+    = f.text_field :last_name, placeholder: "Last Name"
+    = f.text_field :email, placeholder: "Email Address"
     = f.submit "Submit", class: 'btn btn-primary'
     = link_to 'Back', articles_path, class: 'btn btn-default'
 
