--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -2,6 +2,7 @@
   .comment_content
     %p.comment_body
       = comment.body
-    %p #{time_ago_in_words(comment.created_at)} Ago
-
-  
+    %p
+      %span.label.label-success
+        #{comment.created_at.strftime('%v')}
+      &nbsp;#{time_ago_in_words(comment.created_at)} Ago
